--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital@1&family=Montserrat:wght@400;500&family=Nunito&display=swap');
+
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Montserrat, sans-serif;
 }
