--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,48 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital@1&family=Montserrat:wght@400;500&family=Nunito&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
 body {
+    font-family: Nunito, sans-serif;
+    font-weight: 300;
+    color: #362e32
+}
+
+/* Heading and logo */
+
+h1, h2 {
     font-family: Montserrat, sans-serif;
+    font-weight: 200;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+}
+header a {
+    text-decoration: none;
+}
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem;
+}
+.logo {
+    flex: 1;
+    font-size: 1.2rem;
+}
+.navigation {
+    flex: 1;
+    text-align: right;
+}
+.navigation li {
+    display: inline-block;
+    width: auto;
+    align-items: center;
+    align-content: center;
+}
+.navigation ul {
+    list-style: none;
 }
