--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ header a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 2rem;
+    padding: 1.5rem;
 }
 .logo {
     flex: 1;
@@ -55,4 +55,12 @@ header a {
 }
 .active {
     font-weight: 800;
+}
+
+/* Hero image and front text */
+
+#hero-image {
+    height: 750px;
+    width: 100%;
+    background: url(../images/background1.webp) no-repeat center center;
 }
