add style to footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ header a {
     justify-content: space-between;
     align-items: center;
     padding: 1.5rem;
-    position: sticky
+    /*position: sticky*/
 }
 .logo {
     flex: 1;
@@ -125,7 +125,7 @@ header a {
 /* Background 2 with floating text */
 
 #bg2-img {
-    height: 750px;
+    height: 800px;
     width: 100%;
     background: url(../images/background2.webp) no-repeat center center;
     background-attachment: fixed;
@@ -144,4 +144,36 @@ header a {
     bottom: 50%;
     left: 141px;
     position: absolute;
+}
+
+
+/* footer */
+
+footer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    height: 125px;
+
+
+}
+footer li {
+    display: inline-block;
+    width: auto;
+    align-content: center;
+    padding: 10px;
+    letter-spacing: 2px;
+    list-style: none;
+    color: #1a1618;
+}
+footer h3 {
+    text-align: center;
+}
+
+.social-network i {
+    font-size: 160%;
+    color: #1a1618;;
+}
+
 }
