--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,8 +52,6 @@ header a {
 }
 .navigation li:hover {
     font-weight: 800;
-   /* border: #362e32 solid 1px;
-    border-radius: 15px; */
 }
 .active {
     font-weight: 800;
@@ -152,6 +150,40 @@ header a {
     bottom: 50%;
     left: 141px;
     position: absolute;
+}
+
+/* prices */
+#prices-outer {
+    position: relative;
+}
+
+#prices-bg {
+    width: 100%;
+    height: 950px;
+    background: url(../images/prices-bg.webp) no-repeat center center;
+}
+#prices-txt {
+    background-color: rgba(248, 248, 248, 0.7);
+    width: 600px;
+    height: auto;
+    padding: 25px;
+    border-radius: 40px;
+    text-align: left;
+    top: 105px;
+    right: 50px;
+    position: absolute;
+}
+
+#prices h3 {
+    font-weight: 200;
+    padding: 25px 0 5px;
+}
+#prices li {
+    padding: 2px 0;
+    list-style: none;
+}
+#prices p {
+    padding-top: 25px;
 }
 
 
