--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,23 +159,25 @@ header a {
 
 #prices-bg {
     width: 100%;
-    height: 950px;
+    height: 1000px;
     background: url(../images/prices-bg.webp) no-repeat center center;
+    background-attachment: fixed;
 }
 #prices-txt {
-    background-color: rgba(248, 248, 248, 0.7);
+    background-color: rgba(248, 248, 248, 0.5);
     width: 600px;
     height: auto;
     padding: 25px;
     border-radius: 40px;
     text-align: left;
-    top: 105px;
+    top: 100px;
     right: 50px;
     position: absolute;
 }
 
 #prices h3 {
     font-weight: 200;
+    font-size: 200%;
     padding: 25px 0 5px;
 }
 #prices li {
