--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,26 +153,23 @@ header a {
 }
 
 /* prices */
-#prices-outer {
-    position: relative;
-}
-
-#prices-bg {
+#prices {
     width: 100%;
     height: 1000px;
+    background: aliceblue;
     background: url(../images/prices-bg.webp) no-repeat center center;
     background-attachment: fixed;
+    display: flex;
+    justify-content: center;
 }
+
 #prices-txt {
     background-color: rgba(248, 248, 248, 0.5);
     width: 600px;
-    height: auto;
-    padding: 25px;
+    padding: 20px;
     border-radius: 40px;
     text-align: left;
-    top: 100px;
-    right: 50px;
-    position: absolute;
+    margin: 25px;
 }
 
 #prices h3 {
