--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,6 +219,17 @@ header a {
 
 /* contact */
 
+#form-section {
+    width: 100%;
+    height: 1000px;
+    background: white;
+    background: url(../images/contact-bg.webp) no-repeat center center;
+    background-attachment: fixed;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+}
+
 .contact-form {
     margin: 150 pixels 10% 0 0;
     color: #1a1618;
@@ -243,6 +254,11 @@ header a {
 .text-input:hover {
     border:rgb(172 64 106 / 100%) 2px solid;
 }
+
+.checkbox-input {
+    margin: 10px 0 0px 10px;
+}
+
 .send-button {
     margin-top: 20px;
     border-radius: 2px;
@@ -256,8 +272,15 @@ header a {
 .send-button:hover {
     background-color: white;
     color: rgb(172 64 106 / 100%);
-    border: rgb(172 64 106 / 100%) 1px solid;
+    border: rgb(172 64 106 / 100%) 2px solid;
 }
+
+textarea {
+    border: 1px solid #1a1618;
+    width: 100%;
+    margin-top: 5px;
+}
+
 
 /* footer */
 
