add media query to header and text over bg2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -328,3 +328,18 @@ footer li {
 .social-icons {
     color: #362e32;
 }
+
+
+/* MEDIA QUERIES */ 
+
+
+    /* On screens that are 800px or less - center header/footer */
+
+@media screen and (max-width: 800px) {
+    .header-container {
+        flex-direction: column;
+    }
+    #bg2-outer h2 {
+        left: 0;
+    }
+}
