--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,9 +204,8 @@ header a {
 /* GALLERY PAGE */
 
 #gallery-txt {
-    height: 50px;
     text-align: left;
-    padding: 25px;
+    padding: 100px;
 }
 #photos {
     clear: both;
@@ -223,7 +222,6 @@ header a {
 
 #form-section {
     width: 100%;
-    height: 1000px;
     background: white;
     background: url(../images/contact-bg.webp) no-repeat center center;
     background-attachment: fixed;
@@ -238,6 +236,7 @@ header a {
 #form-section table {
     width: 100%;
     text-align: center;
+    margin: 25px 0;
 }
 .open-day {
     text-align: right;
@@ -253,6 +252,7 @@ hr {
     background-color: white;
     width: 400px;
     padding: 25px;
+    margin: 25px 0;
 }
 .contact-form h2 {
     color: #1a1618;
@@ -332,8 +332,24 @@ footer li {
 
 /* MEDIA QUERIES */ 
 
+    /* On screens that are 1200 px or less - pricelist will center */
+@media screen and (max-width: 1200px) {
+    #prices {
+        justify-content: center;
+    }
+    #photos {
+        column-count: 4;
+    }
+    #gallery-txt {
+        padding: 10px 100px;
+    }
+    #form-section {
+        flex-direction: column;
+        align-items: center;
+    }
+}
 
-    /* On screens that are 800px or less - center header/footer */
+    /* On screens that are 800px or less */
 
 @media screen and (max-width: 800px) {
     .header-container {
@@ -342,4 +358,16 @@ footer li {
     #bg2-outer h2 {
         left: 0;
     }
+    #prices-txt{
+        font-size: 95%;
+    }
+    #photos {
+        column-count: 2;
+    }
+    #gallery-txt {
+        padding: 10px 25px;
+    }
 }
+
+
+
