--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,7 +167,6 @@ header a {
 
 #prices {
     width: 100%;
-    height: 1000px;
     background: aliceblue;
     background: url(../images/prices-bg.webp) no-repeat center center;
     background-attachment: fixed;
@@ -356,6 +355,9 @@ footer li {
     .header-container {
         flex-direction: column;
     }
+    .navigation li <{
+        padding: 0px;
+    }
     #bg2-outer h2 {
         left: 0;
     }
@@ -368,7 +370,38 @@ footer li {
     #gallery-txt {
         padding: 10px 25px;
     }
+    #hero-image {
+        height: 680px;
+    }
+    .contact-form {
+        width: 300px;
+    }
 }
 
+/* On screens that are 400px or less */
 
-
+@media screen and (max-width: 400px) {
+    .header-container {
+        flex-direction: column;
+        padding: 15px 10px;
+        font-size: 80%;
+    }
+    #bg2-outer h2 {
+        left: 0;
+    }
+    #prices-txt{
+        font-size: 95%;
+    }
+    #photos {
+        column-count: 2;
+    }
+    #gallery-txt {
+        padding: 10px 25px;
+    }
+    #hero-image {
+        height: 680px;
+    }
+    #txt-hair-talk h2{
+        width: 208px;
+    }
+}
