fix bugg gallery. update readme.md

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -350,7 +350,7 @@ footer ul {
     .logo {
         padding: 20px;
     }
-    .navigation li <{
+    .navigation li {
         padding: 0px;
     }
 
