--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,7 +114,7 @@ header a {
     width: 300px;
     height: 300px;
     border-radius: 50%;
-    padding: 15px 0;
+    c
 }
 #what-we-do-h2 {
     font-size: 110%;
@@ -123,6 +123,7 @@ header a {
 }
 #what-container p {
     width: 300px;
+    margin-bottom: 25px;
 }
 
 /* Background 2 with floating text */
@@ -372,16 +373,15 @@ footer ul {
         flex-direction: column;
         align-items: center;
     }
-    #what-div {
-        border-bottom: #eb79b2be 1px solid;
     }
     #what-container img {
         padding: 50px 0 25px;
+        margin: 10px;
     }
     #what-we-do-h2 {
         margin-top: 50px;
     }
-    #what-container p{
+    .what-p-line {
         border-bottom: 1px solid #db4892;
         padding-bottom: 20px;
     }
